// Vitest Snapshot v1

exports[`Selection component > should render correctly when it is disabled 1`] = `
<div
  class="lunatic-combo-box-selection"
  id="idUndefined"
>
  <div
    class="lunatic-combo-box-selected disabled"
  >
    <span
      class="placeholder"
    >
      hello!
    </span>
  </div>
</div>
`;

exports[`Selection component > should render correctly when it is editable 1`] = `
<div
  class="lunatic-combo-box-selection"
  id="idUndefined"
>
  <div
    class="lunatic-combo-box-selected"
  >
    <span
      class="placeholder"
    />
  </div>
</div>
`;

exports[`Selection component > should render correctly when it is expanded 1`] = `
<div
  class="lunatic-combo-box-selection"
  id="idUndefined"
>
  <div
    class="lunatic-combo-box-selected"
  >
    <span
      class="placeholder"
    />
  </div>
</div>
`;

exports[`Selection component > should render correctly with default props 1`] = `
<div
  class="lunatic-combo-box-selection"
  id="idUndefined"
>
  <div
    class="lunatic-combo-box-selected"
  >
    <span
      class="placeholder"
    />
  </div>
</div>
`;
